--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 @import url("common.css");
 
 /*--------------Banner slide---------------*/
-.banner{width:100%; position:absolute; height:814px; background:url(../images/slide1.jpg) center top no-repeat #000; z-index:1;}
+.banner{width:100%; position:absolute; height:700px; background:url(../images/banner-crm.jpg) center top no-repeat #000; z-index:1;margin-top: 90px;}
 .banner{width:100%; float:left;}
 .banner .slide{float:left; width:100%; background:url(../images/preloader.gif) center 290px no-repeat #111316;}
-.banner .slide .slide-inner{min-width:100%; float:left; background-position:center top; height:814px; background-repeat:no-repeat;margin-top: 150px;}
+.banner .slide .slide-inner{min-width:100%; float:left; background-position:center top; height:814px; background-repeat:no-repeat;margin-top: 90px;}
 .banner .slide .slide-inner.sl1{background-image:url(../images/banner-loyalty.jpg); }
 .banner .slide .slide-inner.sl2{background-image:url(../images/banner-teamhr.jpg);}
 .banner .slide .slide-inner.sl3{background-image:url(../images/banner-crm.jpg);}
@@ -346,6 +346,63 @@ header .right nav ul.roomPop li {float: left;	color: #4f4f4f;padding-right: 2px;
 	
 }
 
-
+@font-face{font-family:'Calluna';
+	src:url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/callunasansregular-webfont.woff') format('woff');
+   }
+ 
+   #columns {
+	   column-width: 320px;
+	   column-gap: 15px;
+	 width: 90%;
+	   max-width: 1100px;
+	   margin: 50px auto;
+   }
+   
+   div#columns figure {
+	   background: #fefefe;
+	   border: 2px solid #fcfcfc;
+	   box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
+	   margin: 0 2px 15px;
+	   padding: 15px;
+	   padding-bottom: 10px;
+	   transition: opacity .4s ease-in-out;
+	 display: inline-block;
+	 column-break-inside: avoid;
+   }
+   
+   div#columns figure img {
+	   width: 100%; height: auto;
+	   border-bottom: 1px solid #ccc;
+	   padding-bottom: 15px;
+	   margin-bottom: 5px;
+   }
+   
+   div#columns figure figcaption {
+	 font-size: .9rem;
+	   color: #444;
+	 line-height: 1.5;
+   }
+   
+   div#columns small { 
+	 font-size: 1rem;
+	 float: right; 
+	 text-transform: uppercase;
+	 color: #aaa;
+   } 
+   
+   div#columns small a { 
+	 color: #666; 
+	 text-decoration: none; 
+	 transition: .4s color;
+   }
+   
+   div#columns:hover figure:not(:hover) {
+	   opacity: 0.4;
+   }
+   
+   @media screen and (max-width: 750px) { 
+	 #columns { column-gap: 0px; }
+	 #columns figure { width: 100%; }
+   }
 
 
